# ddgem

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ddgem/: __init__.py  exceptions.py
src/ddgem/utils/: ddsearch.py  gem.py
tests/: conftest.py
tests/unit_tests/: test_gem_client.py
